--- a/todo.txt
+++ b/todo.txt
@@ -7,3 +7,4 @@ angular
 - why pass array in controller definition (minification change to a or b and angular doesn't recognize a or b... just '$log'.. .etc)
 - ways how angular put variable in watch automatically aaaa 
 - look all the directives of angularjs
+- services (singletons)
